--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         }
     },
     "require": {
+        "phpunit/phpunit": "^4.8",
         "doctrine/dbal": "^2.5",
         "league/container": "^2.0",
         "zendframework/zend-diactoros": "^1.3",
